# PhyloDM

./: .gitignore  .releaserc  .travis.yml  CHANGELOG.md  CITATION.cff  Cargo.toml  Dockerfile  MANIFEST.in  README.md  package-lock.json  package.json  pyproject.toml  setup.py  version.sh
.github/workflows/: build-dev.yml  build-publish.yml  release.yml  semantic-release.yml  test.yml
examples/: example.tree
phylodm/: __init__.py  __main__.py  common.py  exceptions.py  indices.py  pdm.py  pdm_c.pyx  pipeline.py  symmat.py
profile/: profile_symmat.py  test_profile.py
python/phylodm/: __init__.py
scripts/: Dockerfile  build.sh  phylodm_perf.py  phylodm_perf_worker.py
scripts/generate_test_data/: generate_test_tree.py  test.tree
scripts/perf_test/: collect_data.py  plot_data.py  run_test.py
scripts/performance/: .gitignore  Snakefile
scripts/performance/envs/: base.yaml
scripts/performance/scripts/: aggregate.py  generate_tree.py  load_dendropy.py  monitor_run.py  plot.py  run_dendropy.py  run_phylodm.py
src/: error.rs  lib.rs  main.rs  node.rs  pdm.rs  python.rs  tree.rs  types.rs  util.rs
src/tree/: mod.rs  node.rs  types.rs
test/: test_phylodm.py
tests/: test_bl_7.tree  test_common.py  test_indices.py  test_pdm.py  test_symmat.py  tree.rs  util.rs
