[package]
name = "phylodm"
version = "3.0.0"
authors = ["Aaron Mussig <aaronmussig@gmail.com>"]
edition = "2021"
description = "Efficient calculation of phylogenetic distance matrices."
readme = "README.md"
repository = "https://github.com/aaronmussig/PhyloDM"
license = "GPL-3.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
python = ["pyo3", "numpy"]

[dependencies]
light_phylogeny = "2.1"
derive_more = "0.99"
itertools = "0.10"
pyo3 = { version = "0.19.0", features = ["extension-module"], optional = true }
numpy = { version = "0.19.0", optional = true }
ndarray = "0.15"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
